@@ -1,6 +1,6 @@
 # Distributed under the GNU General Public License version 2
 # Copyright 2003-2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/generic_stage_target.py,v 1.8 2004/08/02 23:23:34 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/generic_stage_target.py,v 1.9 2004/08/03 00:09:24 zhen Exp $
 
 """
 This class does all of the chroot setup, copying of files, etc. It is
@@ -368,8 +368,7 @@ class generic_stage_target(generic_target):
 			myf.close()
 			outf.close()
 			os.rename(self.settings["chroot_path"]+"/tmp/out.txt",self.settings["chroot_path"]+"/etc/passwd")
-			cmd("/usr/bin/pkill -U 7980","could not kill distcc process(es)")
-			
+						
 		try:
 			cmd("/bin/bash "+self.settings["sharedir"]+"/targets/"+self.settings["target"]+\
 				"/"+self.settings["target"]+".sh preclean","preclean script failed.")
@@ -446,6 +445,10 @@ class generic_stage_target(generic_target):
 			self.unmerge()
 		self.unbind()
 		
+		# kill distcc processes outside of the chroot
+		if self.settings.has_key("DISTCC"): 
+			cmd("/usr/bin/pkill -U 7980","could not kill distcc process(es)")
+
 		if self.settings["target"] in ["stage1","stage2","stage3","livecd-stage2"]:
 			# clean is for removing things after bind-mounts are 
 			# unmounted (general file removal and cleanup)
